update main css / fixed vertical overlap of columns

--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,6 @@ i:hover {
 
 .projects {
 	color: white;
-	height: 92vh;
 }
 
 .projectHeader {
